--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -122,6 +122,53 @@
 		display: inline-block;
 	}
 	
+	.copy {
+		text-align: center;
+		align-items: center;
+		width: 100%;
+		height: 30px;
+	  }
+	
+	  .copy p{
+		text-align: center;
+		align-items: center;
+		padding: 5px 0;
+		font-family: 'Montserrat';
+		font-weight: bold;
+		text-shadow: #5E1F00 1px 1px 2px;
+		word-wrap: break-word;
+	  }
+	
+	
+	
+	  .footer {
+		background: var(--cor0);
+		text-decoration: none;
+		text-align: left;
+		height: 100%;
+	  }
+	
+	  .footer h3{
+		font-size: 20px;
+		font-family: Arial, Helvetica, sans-serif;
+		font-weight: bold;
+	
+	  }
+	
+	  .footer p{
+		max-width: 1000px;
+	  }
+	
+	
+	
+	  .copy {
+		color: rgb (0, 0, 255);
+		background: var(--cor0) ;
+		font-weight: bold;
+		text-align: left;
+		letter-spacing: 1px;
+	  }
+	  
 	}
 @media only screen and (min-width: 1px) and (max-width: 767px) {
 /*Estilos para celular*/
@@ -402,3 +449,50 @@ font-size: 250%;
 	margin-bottom: 20px;
 }
 /*diferente*/
+
+.copy {
+    text-align: center;
+    align-items: center;
+    width: 100%;
+    height: 30px;
+  }
+
+  .copy p{
+    text-align: center;
+    align-items: center;
+    padding: 5px 0;
+    font-family: 'Montserrat';
+    font-weight: bold;
+    text-shadow: #5E1F00 1px 1px 2px;
+    word-wrap: break-word;
+  }
+
+
+
+  .footer {
+    background: var(--cor0);
+    text-decoration: none;
+    text-align: left;
+    height: 100%;
+  }
+
+  .footer h3{
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+
+  }
+
+  .footer p{
+    max-width: 1000px;
+  }
+
+
+
+  .copy {
+    color: rgb (0, 0, 255);
+    background: var(--cor0) ;
+    font-weight: bold;
+    text-align: left;
+    letter-spacing: 1px;
+  }
