--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -1,5 +1,12 @@
 /*Estilos para Tablet*/
-
+:root { /*Usando variaveis assim, pode se alterar cores bem mais rapido*/
+    --cor0:#D9A404;
+    --cor1:#BF7E04;
+    --cor2:#A6845B;
+    --cor3:#5E1F00;
+    --cor4:#A25631;
+    --cor5:#F2E6DF;
+  }
 @media only screen and (min-width: 768px) and (max-width: 1325px) {
 	/*Delicias*/
 	.delicias ul {
@@ -89,7 +96,7 @@
 	}
 	
 	.produto_item #miniscaseirinho {
-	  background: var(--cor0);
+	  background: var(--cor1);
 	}
 
 	.montagem {
@@ -338,19 +345,20 @@
 }
 
 
-.produto_item #miniscaseirinho {
-  background: var(--cor0);
+#miniscaseirinho {
+  background: var(--cor1);
 }
 
 .produto_item h2{
 	color: white;
-	font-size: 36px;
+	font-size:200%;
 	text-transform: uppercase;
 	letter-spacing: .1em;
 	font-weight: bold;
 	position: relative;
-	top: -185px;
-	margin-left: -95%;
+	top: -180px;
+	margin-right: 400%;
+	margin-left: -70%;
 }
 
 .produto_icone {
@@ -367,8 +375,8 @@
 }
 
 .montagem {
-	margin-left: -75%;
-	width: 150%;
+	margin-left: -80%;
+	width: 110%;
 }
 
 .qualidade_lista li {
@@ -421,10 +429,6 @@ font-size: 250%;
 .contato1 {
 	margin-top: -50px;
 }
-}
-
-
-/*Contato*/
 
 .titulo_contato {
 	margin-top: 14px;
@@ -456,19 +460,6 @@ font-size: 250%;
     width: 100%;
     height: 30px;
   }
-
-  .copy p{
-    text-align: center;
-    align-items: center;
-    padding: 5px 0;
-    font-family: 'Montserrat';
-    font-weight: bold;
-    text-shadow: #5E1F00 1px 1px 2px;
-    word-wrap: break-word;
-  }
-
-
-
   .footer {
     background: var(--cor0);
     text-decoration: none;
@@ -495,4 +486,20 @@ font-size: 250%;
     font-weight: bold;
     text-align: left;
     letter-spacing: 1px;
+	margin: 0 auto;
   }
+  .copy p{
+    text-align: center;
+    align-items: center;
+    padding: 5px 0;
+    font-family: 'Montserrat';
+    font-weight: bold;
+    text-shadow: #5E1F00 1px 1px 2px;
+    word-wrap: break-word;
+	margin: 0 auto;
+  }
+}
+
+
+/*Contato*/
+
